# robot_math_utils

./: CMakeLists.txt  README.md  package.xml
docs/: manipulability_gradient.ipynb  manipulability_gradient.md
include/robot_kinematics_utils/: robot_kinematics_utils_v1_0.hpp
include/robot_math_utils/: robot_math_utils_v1_0.hpp  robot_math_utils_v1_1.hpp  robot_math_utils_v1_10.hpp  robot_math_utils_v1_11.hpp  robot_math_utils_v1_12.hpp  robot_math_utils_v1_13.hpp  robot_math_utils_v1_14.hpp  robot_math_utils_v1_16.hpp  robot_math_utils_v1_17.hpp  robot_math_utils_v1_18.hpp  robot_math_utils_v1_2.hpp  robot_math_utils_v1_3.hpp  robot_math_utils_v1_4.hpp  robot_math_utils_v1_5.hpp  robot_math_utils_v1_6.hpp  robot_math_utils_v1_7.hpp  robot_math_utils_v1_8.hpp  robot_math_utils_v1_9.hpp
src/: compare_SE3_transforms.cpp  fk_sim.py  robot_math_utils_test.cpp  screw_motion.py  test_fk.cpp  test_ik.cpp  test_manipulability.cpp  transform_time_analysis.cpp
