<?xml version="1.0"?>
<package format="3">
  <name>robot_math_utils</name>
  <version>0.0.1</version>
  <description>A C++ maths library for robotics applications, providing utility functions for robot kinematics, transformations, and control.</description>
  <maintainer email="johnathancheng0125@gmail.com">Wei-Hsuan Cheng</maintainer>
  <license>MIT</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>eigen3_cmake_module</build_depend>
  <build_depend>eigen3</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>eigen3_cmake_module</exec_depend>
  <exec_depend>eigen3</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>



